[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "heapitem"
version = "0.1.0"
description = "Cython-accelerated heap item for password benchmarking"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/your-username/heapitem"

[tool.setuptools]
packages = ["heapitem"]

[tool.setuptools.package-dir]
"" = "."

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux*"
environment = { CFLAGS = "-O3" }