[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "heapitem"
version = "0.1.0"
description = "Cython-accelerated heap item for password benchmarking"
authors = [
    { name="Roberto Di Rosa", email="dirosa.2043388@studenti.uniroma1.it" }
]
readme = "README.md"
license = {text = "dunno"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/BobTheBot988/heapitem"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools]
ext-modules = [
  { name = "heapitem", sources = ["heapitem.pyx"] }
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.cibuildwheel]
# use podman instead of docker
container-engine = "podman"

build-frontend = "pip"
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux*"
environment = { CFLAGS = "-O3" }
