[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "heapitem"
version = "0.1.1"
description = "Cython-accelerated heap item for password benchmarking"
authors = [
    { name="Roberto Di Rosa", email="dirosa.2043388@studenti.uniroma1.it" }
]
readme = "README.md"
license = { file = "LICENSE" }

classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/BobTheBot988/heapitem"
Issues = "https://github.com/BobTheBot988/heapitem/issues"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools]
ext-modules = [
  { name = "heapitem", sources = ["heapitem.pyx"] }
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.cibuildwheel]

build-frontend = "pip"
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux*"
environment = { CFLAGS = "-O3" }
